--- a/stylo.css
+++ b/stylo.css
@@ -93,7 +93,7 @@ text-align: center;
   gap: 20px;
   justify-content: center;
   padding: 20px;
-  background-color: #951717;
+  background-color: #efe8e8;
 }
 
 /* Estilo para cada tarjeta */
@@ -119,7 +119,7 @@ text-align: center;
 
 /* Contenido principal */
 .card-main {
-  background-color: #007BFF;
+  background-color: #ffffff;
   padding: 15px;
   font-size: 16px;
   font-weight: bold;
