--- a/stylo.css
+++ b/stylo.css
@@ -250,26 +250,61 @@ text-align: center;
 
 /*panel d econtrol*/
 .table-container{
+  display: flex;
+  
+  justify-content: space-between;
+  align-items: flex-start;
   width: 100%;
  height: auto;
-  margin: 40px 40px;
- padding-top: 75px;
-   margin-left: 10px; 
+ padding: 60px;
+ padding-top: 130px;
+   
 }
 .table-panel{
-  width: 100%;
+  width: 50%;
+ 
  font-family: sans-serif;
  border-collapse: collapse;
- max-width: 900px;
- margin: auto;
- /* margin-left: 300px;*/
+ 
+ 
 
 }
+/* buscadores*/
+
+.carga-de-producto{
+  background-color: #f2a91a;
+ margin-bottom: 20px;
+  justify-items: center;
+  text-align: center;
+  padding: 10px;
+  font-weight: 600;
+  align-items: center;
+   
+}
+.alta-de-productos{
+ border: solid 2px #f2a91a;
+ padding:20px;
+ text-align: center;
+ font-size: 20px;
+ font-weight: 600;
+ 
+}
+.serch{
+  padding: 30px;
+   
+}
+
+
+
+
+
 .table-panel th, .table-panel td{
+  
   border:3px solid rgb(236, 154, 14) ;
 }
 
 .table-panel th{
+ 
   padding: 10px;
   background-color: #f2a91a;
   color: #130e0e;
@@ -291,7 +326,7 @@ text-align: center;
   
 }
  
-
+/*
 .serch{
   display: flex;
   justify-content: center;
@@ -304,7 +339,7 @@ text-align: center;
 }
 .fron-control{
   border:solid 2px #131312;
-}
+} */
 
 /* Ajuste responsive para pantallas pequeñas */
 @media (max-width: 768px) {
