--- a/stylo.css
+++ b/stylo.css
@@ -16,7 +16,7 @@
 .container-header{ 
   width: 100%;
   padding: 10px ;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(28, 27, 27);
   display: flex;
 justify-content: space-around;
 position: fixed;
@@ -44,14 +44,15 @@ text-align: center;
 .nav-link{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 500;
+  color: #ff9100;
   text-transform: uppercase;
   text-decoration: none;
-  color: rgb(0, 0, 0);
   transition: transform 0.3s ease, font-size 0.3s ease;
 
 }
 .nav-link:hover{
-  color:#f2a91a ;
+  color:#030303 ;
+  background-color: #ff9100;
   border-bottom: #f2a91a solid 3px;
   transform: scale(1.2); /* Aumenta el tamaño al pasar el cursor */
       font-size: 10px; /* Aumenta ligeramente la fuente */
@@ -104,7 +105,7 @@ text-align: center;
 /*card*/
 
 /* Estilos generales para el contenedor principal */
-.productos-container {
+.disco-container {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -293,10 +294,38 @@ text-align: center;
   padding: 30px;
    
 }
+.imagen-rock{
+  margin-bottom: 20px;
+  display: flex;
+ text-align: center;
+ align-items: center;
+ justify-content: center;
+ font-size: 20px;
+ font-weight: 600;
+}
+.form-label-img{
+ 
+ padding: 10px;
+  text-align: center;
+  align-items: center;
+}
+.btn{
+  font-size: 20px;
+  background-color: #f2a91a;
+  color: #130e0e;
+  
+}
+.btn:hover{
+  background-color: #ff9100;
+  color: #7c7e7c;
+}
 
-
-
-
+ 
+.table-panel{
+ margin: 50px;
+  width: 100px;
+  height: auto;
+}
 
 .table-panel th, .table-panel td{
   
@@ -324,6 +353,20 @@ text-align: center;
   height: 60px;
   object-fit: cover;
   
+}
+.disc-serch{
+  background-color: #25f21a;
+   width: 300px;
+    padding: 90px;
+    border: 1px solid #bd1515;
+    border-radius: 5px;
+}
+.poner-disc{
+
+  width: 100%;
+  height: auto;
+ 
+   margin-top:100px;
 }
  
 /*
